created basic multiple choice quiz template

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Quiz</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <p id="timer">15:00</p>
+    <div id="container">
+        JavaScript Quiz
+        <div id="question">Here's a question</div>
+        <div id="answers">
+            <div id="answer_1"><button id="a-btn">A</button>Answer 1</div>
+            <div id="answer_2"><button id="b-btn">B</button>Answer 2</div>
+            <div id="answer_3"><button id="c-btn">C</button>Answer 3</div>
+            <div id="answer_4"><button id="d-btn">D</button>Answer 4</div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
