revamped timer function and added start button

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <p id="timer">15:00</p>
-    <div id="container">
+    <div id="Container">
+        <div id="Title">
         JavaScript Quiz
-        <div id="question">Here's a question</div>
-        <div id="answers">
-            <div id="answer_1"><button id="a-btn">A</button>Answer 1</div>
-            <div id="answer_2"><button id="b-btn">B</button>Answer 2</div>
-            <div id="answer_3"><button id="c-btn">C</button>Answer 3</div>
-            <div id="answer_4"><button id="d-btn">D</button>Answer 4</div>
+        </div>
+        <p id="countdown"></p>
+        <div id="startButtons">
+        <button onclick="sample()" id="gameStart">Start!</button>
+        <div id="Question">Lorem ipsum dolor sit amet, id percipit tincidunt nec?</div>
+        <div id="Answers">
+            <div id="answer_1"><button id="a-btn" class="button">A</button>Answer 1</div>
+            <div id="answer_2"><button id="b-btn" class="button">B</button>Answer 2</div>
+            <div id="answer_3"><button id="c-btn" class="button">C</button>Answer 3</div>
+            <div id="answer_4"><button id="d-btn" class="button">D</button>Answer 4</div>
         </div>
     </div>
 
