--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="myscripts.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="Card">
         <div id="Timer">
-            ~
+            ~ <button id="start-btn">Start!</button>
         </div>
         <div id="Question" class="hide">
             Lorem ipsum?
