got help from Ty on the quiz functions, need to add highscore portion of assignment

--- a/index.html
+++ b/index.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <div id="Card">
         <div id="Timer">
-            ~ <button id="start-btn">Start!</button>
+            <button id="start-btn">Start!</button>
         </div>
         <div id="Question" class="hide">
-            Lorem ipsum?
+            Question?
         </div>
         <div id="Answers" class="hide">
-            <button id="ans1"></button>
-            <button id="ans2"></button>
-            <button id="ans3"></button>
-            <button id="ans4"></button>
         </div>
     </div>
+<!-- <jquery cdn> -->
+<script src="script.js"></script>
 </body>
 </html>
